[gd_scene load_steps=6 format=3 uid="uid://ck3pm7kmvyejx"]

[ext_resource type="AudioStream" uid="uid://dxjb2vy3t20pf" path="res://sfx/rifle_alt.wav" id="1_55b5x"]
[ext_resource type="Script" path="res://player/weapons/revolver/revolver.gd" id="1_d40mf"]
[ext_resource type="AudioStream" uid="uid://wrtu4sbi687v" path="res://sfx/no_ammo_click.wav" id="2_8bh02"]
[ext_resource type="AudioStream" uid="uid://brqtlyf7twds5" path="res://sfx/single_bullet_load.wav" id="3_tnma4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f8eha"]
radius = 2.0

[node name="Uzi" type="Node2D"]
script = ExtResource("1_d40mf")

[node name="ShootAudioStream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_55b5x")

[node name="NoAmmoAudioStream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_8bh02")
volume_db = 10.0

[node name="ReloadAudioStream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_tnma4")

[node name="ShootArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootArea"]
shape = SubResource("CircleShape2D_f8eha")
